// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accRating": 80.925,
  "accuracyPct": 35,
  "allStatTotal": 263,
  "atk": 78,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 8.6,
  "critMult": 1.5550299513149461,
  "critResistPct": 1.5,
  "def": 9,
  "dexStat": 148,
  "evaRating": 76.5,
  "evasionPct": 75,
  "extraAttackChancePct": 68.3,
  "healMult": 1.1500000000000001,
  "hp": 670,
  "intStat": 15,
  "lukStat": 55,
  "magicAtk": 10,
  "magicDef": 14,
  "maxHp": 670,
  "maxMp": 227,
  "minDamage": 4,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 136.6,
  "spiStat": 15,
  "strStat": 15,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accRating": 35.375,
  "accuracyPct": 35,
  "allStatTotal": 100,
  "atk": 14,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.4604255649461715,
  "critResistPct": 1.5,
  "def": 9,
  "dexStat": 15,
  "evaRating": 0,
  "evasionPct": 0,
  "extraAttackChancePct": 7.125,
  "healMult": 1.1500000000000001,
  "hp": 220,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 10,
  "magicDef": 14,
  "maxHp": 220,
  "maxMp": 92,
  "minDamage": 6,
  "mp": 92,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 14.25,
  "spiStat": 15,
  "strStat": 25,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accRating": 49.925,
  "accuracyPct": 35,
  "allStatTotal": 253,
  "atk": 11,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.45280302180028,
  "critResistPct": 4.5,
  "def": 9,
  "dexStat": 15,
  "evaRating": 0,
  "evasionPct": 0,
  "extraAttackChancePct": 7.125,
  "healMult": 1.33,
  "hp": 670,
  "intStat": 148,
  "lukStat": 15,
  "magicAtk": 66,
  "magicDef": 43,
  "maxHp": 670,
  "maxMp": 501,
  "minDamage": 17,
  "mp": 501,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 14.25,
  "spiStat": 45,
  "strStat": 15,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accRating": 50.125,
  "accuracyPct": 35,
  "allStatTotal": 255,
  "atk": 31,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 16.2,
  "critMult": 1.7329671756295133,
  "critResistPct": 1.5,
  "def": 9,
  "dexStat": 60,
  "evaRating": 52.5,
  "evasionPct": 52.5,
  "extraAttackChancePct": 28.5,
  "healMult": 1.1500000000000001,
  "hp": 670,
  "intStat": 15,
  "lukStat": 135,
  "magicAtk": 10,
  "magicDef": 14,
  "maxHp": 670,
  "maxMp": 227,
  "minDamage": 4,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 57,
  "spiStat": 15,
  "strStat": 15,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accRating": 37.375,
  "accuracyPct": 35,
  "allStatTotal": 275,
  "atk": 32,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.4755190439471157,
  "critResistPct": 1.5,
  "def": 64,
  "dexStat": 15,
  "evaRating": 0,
  "evasionPct": 0,
  "extraAttackChancePct": 4.625,
  "healMult": 1.7700000000000002,
  "hp": 1175,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 10,
  "magicDef": 14,
  "maxHp": 1175,
  "maxMp": 227,
  "minDamage": 16,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 9.25,
  "spiStat": 15,
  "strStat": 45,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accRating": 47.675,
  "accuracyPct": 35,
  "allStatTotal": 263,
  "atk": 79,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.5501420281376743,
  "critResistPct": 1.5,
  "def": 29,
  "dexStat": 15,
  "evaRating": 0,
  "evasionPct": 0,
  "extraAttackChancePct": 1.625,
  "healMult": 1.31,
  "hp": 830,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 10,
  "magicDef": 14,
  "maxHp": 830,
  "maxMp": 227,
  "minDamage": 26,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 3.25,
  "spiStat": 15,
  "strStat": 148,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "b6100e5b266d4e1529350ba2c567e2f73261d31f",
    "outcome": "win",
    "playerHp": 827,
    "playerMp": 227,
    "turns": 7,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "ff445781e55e9fbd326ffa786dc306536e34d047",
    "outcome": "win",
    "playerHp": 818,
    "playerMp": 227,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "407f6766f301b734f51116291ef3abfc40ada572",
    "outcome": "win",
    "playerHp": 649,
    "playerMp": 227,
    "turns": 45,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "599411e5bfdbbc55233baf92bc9d40feb45670dd",
    "outcome": "win",
    "playerHp": 669,
    "playerMp": 227,
    "turns": 13,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "95aef202dc384a9015f6c12e9e5b7f8e411707cd",
    "outcome": "win",
    "playerHp": 550,
    "playerMp": 501,
    "turns": 27,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "2cc1f7575530337baf4aa126a7a4137f9ae26bf3",
    "outcome": "win",
    "playerHp": 855,
    "playerMp": 227,
    "turns": 58,
  },
  {
    "enemyHp": 0,
    "label": "heal_vs_들소_boss",
    "logSha": "c5f154320036184254e9059038a30568e048ef01",
    "outcome": "win",
    "playerHp": 1152,
    "playerMp": 227,
    "turns": 91,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "7d647e2712b369404fe1c0e5cc6a1839aad61bde",
    "outcome": "win",
    "playerHp": 657,
    "playerMp": 501,
    "turns": 10,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "003f46b645d59759764973ba941d10af03db402e",
    "outcome": "win",
    "playerHp": 214,
    "playerMp": 92,
    "turns": 14,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "599908c8d15915351885475cf2084dc8fc476983",
    "outcome": "p1_win",
    "turns": 43,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "099149e79bdbbfd092671adc1598444bd630e1e8",
    "outcome": "p1_win",
    "turns": 78,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "e93087af4629048ef22a268d17acd72cc90e8c98",
    "outcome": "p2_win",
    "turns": 206,
  },
]
`;

exports[`골든: 적 페이즈 메커닉 커버리지 (리팩터 가드) > 적 페이즈 메커닉 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "enemy_dot_tick",
    "logSha": "92e6d5991abf16e11499c338b23076daeca29c13",
    "outcome": "win",
    "playerHp": 818,
    "playerMp": 227,
    "turns": 14,
  },
  {
    "enemyHp": 0,
    "label": "chill_enemy",
    "logSha": "c5f3ca14c1aa504506680cc16cb1773082649800",
    "outcome": "win",
    "playerHp": 923,
    "playerMp": 227,
    "turns": 36,
  },
  {
    "enemyHp": 0,
    "label": "thorns_reflect",
    "logSha": "f5e87591688dd748ff1c93b6e6602a1cc2df0dbd",
    "outcome": "win",
    "playerHp": 1133,
    "playerMp": 227,
    "turns": 42,
  },
  {
    "enemyHp": 0,
    "label": "evade_reflect",
    "logSha": "a99c2548d9f157eb54d17532ca0f3d93a4e8dd3b",
    "outcome": "win",
    "playerHp": 644,
    "playerMp": 227,
    "turns": 89,
  },
  {
    "enemyHp": 0,
    "label": "enrage_enemy",
    "logSha": "a92dbfe3bc61af88af449e762c3d812ad923cec0",
    "outcome": "win",
    "playerHp": 796,
    "playerMp": 227,
    "turns": 16,
  },
  {
    "enemyHp": 0,
    "label": "brace_enemy",
    "logSha": "95f2dc242d584d5ae8324fd66a1a7369b153770c",
    "outcome": "win",
    "playerHp": 818,
    "playerMp": 227,
    "turns": 13,
  },
  {
    "enemyHp": 0,
    "label": "heavyblow_enemy",
    "logSha": "5f6574d76ed321759e6281d603e6be5c98eb4960",
    "outcome": "win",
    "playerHp": 623,
    "playerMp": 227,
    "turns": 73,
  },
]
`;
